gitops/cc-config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cc-gateway
  namespace: cc-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-vault
      hostname: "vault.${domain}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-harbor
      hostname: "harbor.${domain}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: harbor-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-minio
      hostname: "minio.${domain}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: minio-tls
      allowedRoutes:
        namespaces:
          from: Same
